# 歷史更新 History Update

* 20230505 Update
  * 調整 LineBot Log規則
  * 加入 LineBot 新邀請網址liff.line.me

* 20230504 Update
  * 加入 LineBot IP來源限制
  * 更新 165反詐騙公告網址(112/4/25-112/4/30民眾通報假投資(博弈)詐騙網站)
  * 更新 個人不想看的廣告或網站
  * 更新 Dcard受害文章
  * 更新 FB網友提供清單
  * 更新 ScamAdviser電子報
  * 調整 文件格式
  * 調整 白名單
  * 調整 LineBot Log規則

* 20230503 Update
  * 更新 個人不想看的廣告或網站
  * 更新 Dcard受害文章
  * 修復 LineBot import錯誤
  * 修復 LineBot query line id return錯誤
  * 調整 LineBot 正規化規則
  * 調整 LineBot 用字
  * 調整 LineBot 防呆
  * 調整 LineBot 狀態寫入log

* 20230502 Update
  * 更新 個人不想看的廣告或網站
  * 更新 Dcard受害文章
  * 更新 FB網友提供清單
  * 更新 FX110虛假交易所
  * 修復 LineBot import問題
  * 調整 政府機關API取得資料Script
  * 調整 LineBot文字說明
  * 調整 LineBot移除重複資料
  * 調整 LineBot邀請碼辨識的出ID，額外比對其他資料庫
  * 調整 LineBot邀請碼辨識的出ID，額外加入其他資料庫

* 20230429 Update
  * 調整 LineBot大小寫導致判斷問題

* 20230428 Update
  * 加入 LineBot判斷邀請網址
  * 更新 165反詐騙公告網址(112/4/18-112/4/24民眾通報假投資(博弈)詐騙網站)
  * 更新 165反詐騙諮詢專線-詐騙LINE ID(112/4/18-112/4/24)
  * 更新 內容農場與多導向可能危險網站
  * 更新 Dcard受害文章
  * 更新 FB網友提供清單
  * 調整 LineBot分檔

* 20230427 Update
  * 加入 LineBot功能判斷LineID功能
  * 更新 個人不想看的廣告或網站
  * 更新 Dcard受害文章
  * 更新 FB網友提供清單
  * 更新 FX110虛假交易所
  * 調整 政府機關API取得資料Script
  * 調整 格式
  * 調整 LineBot功能

* 20230426 Update
  * 加入 政府機關API取得資料Script
  * 更新 個人不想看的廣告或網站
  * 更新 Dcard受害文章
  * 更新 FX110虛假交易所
  * 更新 ScamAdviser電子報

* 20230425 Update
  * 更新 內容農場與多導向可能危險網站
  * 更新 個人不想看的廣告或網站
  * 調整 正規化規則歸類到TLD
  * 調整 LineBot功能，更換whois lib
  * 修復 LineBot功能，回傳多個建立時間
  * 修復 LineBot功能，回傳多個status，故取消顯示

* 20230424 Update
  * 更新 內容農場與多導向可能危險網站
  * 更新 個人不想看的廣告或網站
  * 更新 FB網友提供清單
  * 調整 LineBot

* 20230423 Update
  * 更新 個人不想看的廣告或網站
  * 更新 FB網友提供清單
  * 調整 LineBot

* 20230422 Update
  * 更新 165反詐騙公告網址(112/4/11-112/4/17民眾通報假投資(博弈)詐騙網站)
  * 更新 個人不想看的廣告或網站
  * 更新 Dcard受害文章
  * 調整 優化自動更新List與自動建立清單

* 20230421 Update
  * 更新 個人不想看的廣告或網站
  * 更新 Dcard受害文章
  * 修復 LineBot無法自動更新List

* 20230420 Update
  * 加入 LineBot Code
  * 更新 個人不想看的廣告或網站
  * 更新 寵物詐騙
  * 更新 Dcard受害文章
  * 解放 lihi系列縮網址

* 20230419 Update
  * 加入 所需要的script
  * 更新 內容農場與多導向可能危險網站